# calculator

./: .clang-format  .gitignore  CMakeLists.txt  INSTALL.md  README.md  f1.msl  f16.msl  main.lt  main.ms  main.msl  output.txt  vsdev.ps1
docs/: config_command.md  dispatch_overview.md  env_command.md  evaluate_command.md  set_command.md  simplify_command.md  solve_command.md  variable_commands.md
src/: main.cpp
src/ast/: binary.h  binary.hpp  equation.h  equation.hpp  expr.h  function_call.h  index_access.h  number.h  number.hpp  number_array.h  substitutor.h  variable.h  variable.hpp
src/common/: command.h  config.hpp  console_ui.h  dependency_graph.h  environment.hpp  error.h  format_utils.h  fraction.h  fraction.hpp  span.h  utils.h  value.h
src/core/ast/: binary.h  binary.hpp  equation.h  expr.h  expr.hpp  number.h  variable.h
src/core/common/: color.hpp  command.hpp  config.hpp  environment.hpp  error.h  error.hpp  fraction.h  replxx.hpp  span.h  suggest.hpp  utils.hpp
src/core/eval/: context.h  evaluator.cpp  evaluator.h  evaluator.hpp
src/core/lexer/: lexer.h  token.h
src/core/parser/: parser.cpp  parser.h  parser.hpp
src/core/solve/: linear_collector.h  linear_system.h  simplify.h  simplify.hpp  solver.h
src/eval/: context.h  context.hpp  evaluator.cpp  evaluator.h
src/lexer/: lexer.h  lexer.hpp  token.h  token.hpp
src/parser/: parser.cpp  parser.h  parser.hpp
src/solve/: constant_folder.h  domain.h  linear_collector.h  linear_collector.hpp  linear_system.h  nonlinear_system.h  numerical_solver.h  quadratic_collector.h  simplify.h  simplify.hpp  solve_result.h  solver.h  solver.hpp
tests/ast/: ast_tests.cpp
tests/common/: command_test.cpp  dependency_graph_test.cpp  error_tests.cpp  fraction_test.cpp  span_test.cpp  utils_test.cpp
tests/eval/: context_tests.cpp  evaluator_tests.cpp
tests/lexer/: lexer_tests.cpp
tests/parser/: parser_tests.cpp
tests/solve/: domain_tests.cpp  linear_collector_tests.cpp  linear_system_tests.cpp  simplify_tests.cpp  solver_tests.cpp
